# MyHelper

./: .env.development  .env.production  .gitignore  .prettierrc  CLAUDE.md  README.md  THEME_GUIDE.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust_performance_analysis.md  specification.md  tailwind.config.js  tsconfig.json  uno.config.ts  vite.config.ts  桌面宠物.md
.claude/: settings.local.json
.cursor/rules/: base.mdc  myhelper.mdc
.github/workflows/: preview.yml  release.yml
docs/: plugin-development.md  promotion.md
plugin/mh-plugin/: index.html  mhPlugin.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
plugin/mh-plugin/public/: mhPlugin.json
plugin/mh-plugin/src/: App.vue  main.ts
plugin/mh-plugin/src/plugin-api/: plugin.api.ts  plugin.d.ts
plugin/myPlugin/: index.html  index.js  test.js
plugin/myhelper-plugin/: index.html  mhPlugin.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
plugin/myhelper-plugin/src/: App.vue  main.ts  vite-env.d.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  MyHelper.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permission-macro/: Cargo.toml
src-tauri/permission-macro/src/: lib.rs
src-tauri/src/: database.rs  error.rs  lib.rs  lib.rs.copy  lib.rs.old  main.rs
src-tauri/src/command/: common.rs  config.rs  database.rs  fd_search.rs  get_app_icon.rs  get_web_icon.rs  handlers.rs  hotkey.rs  logger.rs  mod.rs  open_web_or_app.rs  pet.rs  plugin.rs  quick_input.rs  set_local_icon.rs  settings.rs  state.rs
src-tauri/src/command/icon/: delete_icon.rs  get_web_icon.rs  mod.rs  set_local_icon.rs
src-tauri/src/command/icon/get_app_icon/: linux.rs  mac.rs  mod.rs  win.rs
src-tauri/src/command/mh_plugin/: install.rs  mod.rs
src-tauri/src/command/paste/: mod.rs  win.rs
src-tauri/src/command/pet/: detect.rs  mod.rs  models.rs
src-tauri/src/command/quick_input/: clipboard.rs  mod.rs
src-tauri/src/command/quick_input/clipboard/: linux.rs  mac.rs  mod.rs  win.rs
src-tauri/src/command/quick_input/paste/: linux.rs  mac.rs  mod.rs  win.rs
src-tauri/src/core/: app_handle.rs  hotkey.rs  init.rs  mod.rs  tray.rs  window.rs
src-tauri/src/core/app/: mac.rs  win.rs
src-tauri/src/mh_plugin/: install.rs  mod.rs  self_config.rs  sync.rs
src-tauri/src/services/: config.rs  database.rs  fd_search.rs  mod.rs
src-tauri/src/utils/: app_handle.rs  config.rs  database.rs  error.rs  get_icon.rs  hotkey.rs  logger.rs  mod.rs  path.rs  reqwest.rs  response.rs
src/api/: network.ts
src/api/ipc/: clipboard.api.ts  config.api.ts  database.api.ts  fdSearch.api.ts  hotkey.api.ts  launch.api.ts  main.ts  pet.api.ts  plugin.api.ts  state.api.ts  update.api.ts  window.api.ts  wrapper.ts
src/api/network/: plugin.api.ts  user.api.ts  wrapper.ts
src/assets/: main.css
src/assets/css/: base.css  common.css  main.css  theme.less  variable.less
src/components/: AddItem.vue  AvatarDisplay.vue  CustomButton.vue  CustomInput.vue  CustomThemeDialog.vue  Loading.vue  Message.vue  Modal.vue  VirtualList.vue  search.vue
src/components/Pet/: ModelImportDialog.vue  Pet.vue  PetDisplay.vue  PetGlobalManager.ts  PetList.vue  PetMainDisplay.vue  PetSelector.vue  SimpleLive2DManager.ts  index.ts  petManager.ts
src/components/Pet/models/: PetModelFactory.ts
src/components/common/: AvatarDisplay.vue  index.ts
src/components/items/: CommonPanel.vue  ItemFormModal.vue
src/components/items/utils/: contextMenu.ts
src/composables/: autosStart.ts  clipboard.ts  hotkey.ts  loading.ts  message.ts  useContextMenu.ts  useLive2D.ts
src/desktop-pet/: detector.ts  factory.ts  index.ts  manager.ts  types.ts
src/desktop-pet/components/: PetInline.vue  PetWindow.vue
src/desktop-pet/composables/: usePet.ts
src/desktop-pet/renderers/: live2d.ts  lottie.ts  spine.ts
src/interface/: app.d.ts  database.d.ts  database.real.d.ts  enum.ts  menu.d.ts  pet.d.ts  plugin.d.ts  pluginMarket.d.ts  quickInput.d.ts  request.d.ts  theme.d.ts  update.d.ts  user.d.ts  web.d.ts  window.d.ts  windowEnum.ts
src/pages/: OpenApp.vue  OpenWeb.vue  Search.vue  home.vue  index.vue  menu.vue  settings.vue  test.vue  示例
src/plugin/: Plugin.vue
src/router/: index.ts
src/themes/: theme.ts  themeHelpers.ts  useTheme.ts
src/themes/primevue/: index.ts
src/types/: common.ts  database.ts  enum.ts  fdSearch.ts  menu.ts  mh-plugin.d.ts  pet.ts  plugin.ts  pluginMarket.ts  request.ts  search.ts  setting.ts  theme.ts  update.ts  user.ts  window.ts  windowEnum.ts
src/utils/: appInit.ts  autosSart.ts  autosStart.ts  avatar.ts  clipboard.ts  common.ts  config.ts  database.ts  debounce.ts  errorHandler.ts  eventBus.ts  getImages.ts  globalData.ts  hotkey.ts  loading.ts  logger.ts  message.ts  openWebOrApp.ts  pathHandler.ts  petManager.ts  plugin.ts  pluginUtils.ts  theme.ts  themeHelpers.ts  tokenManager.ts  tray.ts  user.ts  validationRules.ts  windowDrag.ts  windowManager.ts
src/views/: Index.vue  Menu.vue  Search.vue  Setting.vue  Settings.vue  home copy.vue
src/views/app/: CommonApp.vue  EditItem.vue
src/views/app/utils/: contextMenu.ts
src/views/label/: Label.vue
src/views/label/Mochi/: Mochi.vue  MochiBox.vue  MochiPaws.vue  MochiShiba.vue  one.vue
src/views/label/utils/: contextMenu.ts
src/views/my/: Login.vue  My.vue
src/views/my-plugin/: MyPlugin.vue
src/views/my/Pet/: Pet.vue  PetList.vue  index.vue
src/views/openApp/: OpenApp.vue
src/views/openApp/utils/: contextMenu.ts
src/views/openWeb/: AddItem.vue  OpenWeb.vue
src/views/openWeb/utils/: contextMenu.ts
src/views/plugin-market/: Develop.vue  PluginMarket.vue
src/views/plugin-market/components/: DevelopDetailDialog.vue  (+8 more)
src/views/quick-input/: Clipboard.vue  Common.vue  CommonText.vue  QuickInput.vue
src/views/search/: Search.vue
src/views/setting/: AboutSettings.vue  GeneralSettings.vue  PetSettings.vue  Setting.vue  ThemeSettings.vue
src/views/web/: AddItem.vue  CommonWeb.vue
(+15 files in other folders)
