[package]
name = "myhelper"
version = "1.0.0"
description = "myhelper"
authors = ["ialtone"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myhelper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
image = "0.24.5" 
url = "2.5.2"
reqwest = { version = "0.12.8", features = ["blocking", "native-tls-vendored"] }
winapi = { version = "0.3.9", features = ["winbase", "winuser", "wingdi", "shellapi"] }
tauri = { version = "2.0.6", features = [ "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.2"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-notification = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40.0", features = ["full", "macros"] }
scraper = "0.20.0"
rand = "0.8.5"
base64 = "0.22.1"
open = "5.3.0"
clipboard-rs = "0.2.1"
directories = "5.0.1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"
objc = "0.2.7"
macos-accessibility-client = "0.0.1"

[target."cfg(target_os = \"windows\")".dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
enigo = "0.2.1"

[target."cfg(target_os = \"linux\")".dependencies]
showfile = "0.1.1"
x11 = "2.21.0"
rdev = "0.5.3"

[profile.dev]
opt-level = 0 #没有优化
debug = 0 #没有调试信息
strip = true #删除符号或调试信息
lto = false #禁用代码优化
