[package]
name = "myhelper"
version = "0.0.1"
description = "myhelper"
authors = ["ialtone"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myhelper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-updater = "2.5.1"

[dependencies]
permission-macro = { path = "./permission-macro" }

image = "0.25.5"
url = "2.5.2"
reqwest = { version = "0.12.9", features = ["native-tls-vendored"] }
tauri = { version = "2.3.1", features = [ "macos-private-api", "protocol-asset", "tray-icon", "image-png", "devtools"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.40.0", features = ["full", "macros"] }
scraper = "0.21.0"
rand = "0.8.5"
base64 = "0.22.1"
open = "5.3.1"
clipboard-rs = "0.2.2"
directories = "5.0.1"
zip = "2.2.0"
sha2 = "0.10.8"
chrono = "0.4.38"
rusqlite = { version = "0.33.0", features = ["bundled"] }
once_cell = "1.20.3"
parking_lot = "0.12.3"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"
objc = "0.2.7"
core-foundation = "0.10.0"
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["NSString"] }
objc2-app-kit = { version = "0.2.2", features = [
    "NSBitmapImageRep", 
    "NSImageRep", 
    "NSWorkspace", 
    "NSImage", 
    "NSGraphics", 
    "NSGraphicsContext"
] }

[target."cfg(target_os = \"windows\")".dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "winbase", "wingdi", "shellapi"] }
enigo = "0.2.1"
scopeguard = "1.2.0"
windows = { version = "0.58.0", features = [
    "Win32", 
    "Win32_UI", 
    "Win32_UI_Shell", 
    "Win32_System_Com", 
    "Win32_Graphics",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Gdi",
] }

[target."cfg(target_os = \"linux\")".dependencies]
x11 = "2.21.0"
rdev = "0.5.3"
gtk = "0.18.1"
gio = "0.20.5"


[profile.dev]
opt-level = 0 #没有优化
debug = 0 #没有调试信息
strip = true #删除符号或调试信息
lto = false #禁用代码优化

[workspace]
members = [
    ".",
    "permission-macro"
]
