[package]
name = "myhelper"
version = "0.0.1"
description = "myhelper"
authors = ["ialtone"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myhelper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.3.0"
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-updater = "2.7.0"

[dependencies]
permission-macro = { path = "./permission-macro" }

image = "0.25.5"
url = "2.5.4"
reqwest = { version = "0.12.15", features = ["native-tls-vendored"] }
tauri = { version = "2.4.1", features = [ "macos-private-api", "protocol-asset", "tray-icon", "image-png", "devtools"] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-shell = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simd-json = "0.15.0"
tokio = { version = "1.44.1", features = ["full", "macros"] }
scraper = "0.23.1"
rand = "0.9.0"
base64 = "0.22.1"
open = "5.3.2"
clipboard-rs = "0.2.4"
directories = "6.0.0"
zip = "2.4.2"
chrono = "0.4.40"
rusqlite = { version = "0.34.0", features = ["bundled"] }
once_cell = "1.21.1"
parking_lot = "0.12.3"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"
objc = "0.2.7"
core-foundation = "0.10.0"
objc2 = "0.6.0"
objc2-foundation = { version = "0.3.0", features = ["NSString"] }
objc2-app-kit = { version = "0.3.0", features = [
    "NSBitmapImageRep", 
    "NSImageRep", 
    "NSWorkspace", 
    "NSImage", 
    "NSGraphics", 
    "NSGraphicsContext"
] }

[target."cfg(target_os = \"windows\")".dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "winbase", "wingdi", "shellapi"] }
enigo = "0.3.0"
scopeguard = "1.2.0"
windows = { version = "0.60.0", features = [
    "Win32", 
    "Win32_UI", 
    "Win32_UI_Shell", 
    "Win32_System_Com", 
    "Win32_Graphics",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
] }

[target."cfg(target_os = \"linux\")".dependencies]
x11 = "2.21.0"
rdev = "0.5.3"
gtk = "0.18.2"
gio = "0.20.9"


[profile.dev]
opt-level = 0 #没有优化
debug = 0 #没有调试信息
strip = true #删除符号或调试信息
lto = false #禁用代码优化

[workspace]
members = [
    ".",
    "permission-macro"
]
